# BachelorThesisMisc

./: README.md  ThesisDoc - Acceso directo.lnk
C# - Implemented bcm2835/: Main.cs
GPIO-C#/: RPi_CSharp_GPIO_Simple_Lib - copia.rar  RpiGPIO.cs
GPIO-C#/ConsoleApplication1/: ConsoleApplication1.sln
GPIO-C#/RPi_CSharp_GPIO_Simple_Lib - copia/: RaspberryPi_CSharp_Lib.sln
GPIO-PInvoke/PinvokeLinux/: PinvokeLinux.sln
POLL Tests/Poll/: gpio.h  test.c  time.c
POLL Tests/Poll_vell/: gpio.c  poll.c
POLL Tests/gpio_event_pinvoke/: gpio_event_pinvoke.sln
PerformanceTests/GPIO/: PerformanceGPIO.logicdata
PerformanceTests/alternativizado/GPIO/link/: CMakeLists.txt  IOSharp.c
PollingLibraryForNetMF/: CMakeLists.txt
SPI-PInvoke/PinvokeLinux/: PinvokeLinux.sln  PinvokeLinux.userprefs
ThesisDoc/: BACHELOR_THESIS.aux  BACHELOR_THESIS.blg  BACHELOR_THESIS.glg  BACHELOR_THESIS.glo  BACHELOR_THESIS.gls  BACHELOR_THESIS.ist  BACHELOR_THESIS.lof  BACHELOR_THESIS.lot  BACHELOR_THESIS.tex  BACHELOR_THESIS.toc  IOSharp.pptx  IOSharp2.pptx  clean.bat  dades.tex  epsc_tfc_pfc.cls  rpi_iosharp.xlsx  system.txt
ThesisDoc/chapters/: _compaginacio.tex  _organitzacio.tex  empty.tex  marea.tex  network.tex  protocol.tex
ThesisDoc/plantilla/: Plantilla_MODIFICADA.rar
ThesisDoc/ppt_pictures/: gw_diagram.vsdx  interrupt-schema.vsdx  iosharp-schema2.vsdx  spi-modules.vsdx  transformations-iosharp.vsdx
firsts-steps-using-pinvoke/: pinvoke_test1.rar
firsts-steps-using-pinvoke/pinvoke_test1/: helloworld.c  main.c  test
firsts-steps-using-pinvoke/pinvoke_test1.1/: Makefile
(+312 files in other folders)
